--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -1,9 +1,13 @@
 body {
-    background: #435243; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #52c234, #061700); 
-    background: linear-gradient(to right, #52c234, #061700);
+  background: #56CCF2;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
   }
 
-img {
-    width: 300px;
-}
+  h6, p {
+    text-align: center;
+  }
+
+// img {
+//     width: 300px;
+// }
